Crash on selecting interface font #100823

Closed
opened 2022-09-05 06:50:57 +02:00 by Pratik Borhade · 7 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78

Blender Version
Broken: version: 3.4.0 Alpha, 0ff920b777
Worked: 3.3

Short description of error
Selecting different font for interface results crash

Exact steps for others to reproduce the error

  • Open default scene
  • {nav Edit > Preferences . Interface > Text rendering}
  • Select interface font from storage

blender.exe         :0x00007FF623CB5820  UI_fontstyle_draw_ex C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_style.cc:164
blender.exe         :0x00007FF623CDE080  widget_draw_text C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_widgets.c:2135
blender.exe         :0x00007FF623CDE7C0  widget_draw_text_icon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_widgets.c:2441
blender.exe         :0x00007FF623CD9050  ui_draw_but C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_widgets.c:5006
blender.exe         :0x00007FF623C6CAA0  UI_blocklist_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface.cc:3509
blender.exe         :0x00007FF62373C7D0  ED_region_header_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:3407
blender.exe         :0x00007FF62373BAA0  ED_region_do_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:551
blender.exe         :0x00007FF6233AB940  wm_draw_window_offscreen C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:945
blender.exe         :0x00007FF6233AB7A0  wm_draw_window C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1114
blender.exe         :0x00007FF6233AB220  wm_draw_update C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1372
blender.exe         :0x00007FF623384D70  WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:647
blender.exe         :0x00007FF623086300  main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:551
blender.exe         :0x00007FF624644C54  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFC2FD854D0  BaseThreadInitThunk
ntdll.dll           :0x00007FFC31864830  RtlUserThreadStart
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78 **Blender Version** Broken: version: 3.4.0 Alpha, 0ff920b777791d6dcc002257f437f86e2d14df01 Worked: 3.3 **Short description of error** Selecting different font for interface results crash **Exact steps for others to reproduce the error** - Open default scene - {nav Edit > Preferences . Interface > Text rendering} - Select interface font from storage - - - ```blender.exe :0x00007FF624384DB0 blf_font_ascender C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenfont\intern\blf_font.c:1217 blender.exe :0x00007FF623CB5820 UI_fontstyle_draw_ex C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_style.cc:164 blender.exe :0x00007FF623CDE080 widget_draw_text C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_widgets.c:2135 blender.exe :0x00007FF623CDE7C0 widget_draw_text_icon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_widgets.c:2441 blender.exe :0x00007FF623CD9050 ui_draw_but C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_widgets.c:5006 blender.exe :0x00007FF623C6CAA0 UI_blocklist_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface.cc:3509 blender.exe :0x00007FF62373C7D0 ED_region_header_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:3407 blender.exe :0x00007FF62373BAA0 ED_region_do_draw C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\screen\area.c:551 blender.exe :0x00007FF6233AB940 wm_draw_window_offscreen C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:945 blender.exe :0x00007FF6233AB7A0 wm_draw_window C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1114 blender.exe :0x00007FF6233AB220 wm_draw_update C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_draw.c:1372 blender.exe :0x00007FF623384D70 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:647 blender.exe :0x00007FF623086300 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:551 blender.exe :0x00007FF624644C54 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFC2FD854D0 BaseThreadInitThunk ntdll.dll :0x00007FFC31864830 RtlUserThreadStart ```
Author
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscribers: @Harley, @deadpin

Added subscribers: @Harley, @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Will confirm as I can get some fonts to crash, but not all. In my case I attempted to load a random system font called 8514oem.fon which yielded the same stack as above. The font->ft_size field is null and traced the following just before crashing:

Code marked as unreachable has been executed. Please report this as a bug.
Error found at C:\Users\blender\git\blender-vdev\blender.git\source\blender\blenfont\intern\blf_font.c:1617 in blf_ensure_size.

The font "works" in 3.3 but is not readable and is just some squiggles. That version prints the following:
The current font does not support the size, 22.000000 and DPI, 72

CC @Harley

Will confirm as I can get some fonts to crash, but not all. In my case I attempted to load a random system font called `8514oem.fon` which yielded the same stack as above. The `font->ft_size` field is null and traced the following just before crashing: ``` Code marked as unreachable has been executed. Please report this as a bug. Error found at C:\Users\blender\git\blender-vdev\blender.git\source\blender\blenfont\intern\blf_font.c:1617 in blf_ensure_size. ``` The font "works" in 3.3 but is not readable and is just some squiggles. That version prints the following: `The current font does not support the size, 22.000000 and DPI, 72` CC @Harley
Harley Acheson self-assigned this 2022-09-05 17:48:00 +02:00
Member

Thanks! Will take a look.

Thanks! Will take a look.
Pratik Borhade changed title from Regression: Crash on selecting interface font to Crash on selecting interface font 2022-09-06 17:10:57 +02:00

This issue was referenced by da9e685e26

This issue was referenced by da9e685e26021202f5cc82e757f4fdf643548805
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100823
No description provided.